--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -24,7 +24,7 @@
         <li><a href="equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Based on Housing document - reviewed by Sharon now<br> <strong class="govuk-tag info">last update:</strong>  <strong>08/01 evening</strong><br>
         See original paper form at the end of CBL <a href="{{ asset_path }}/images/equality-questionnaire-paper-form.png" target="_blank">as an image</a><br>
         See the flow of screens of latest version <a href="{{ asset_path }}/images/equality-diversity-questionnaire3.pdf" target="_blank">as a PDF</a><br>
-        <a href="equal-opportunities/start2.html" target="_blank">see an alternative following feedback</a> done one the 15/01 morning<br></li><br>
+        <a href="equal-opportunities/start2.html">see an alternative following feedback</a> done one the 15/01 morning<br></li><br>
 
         <li><a href="education/P1-start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>18/12 morning</strong>
           <span class="UR-tag red">LIVE form</span> since 17/12/18</li><br>
