--- a/app/views/forms/equal-opportunities/ethnic-origin2.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin2.html
@@ -45,7 +45,7 @@ Ethnic group - Equality and diversity
         name: "ethnic",
         fieldset: {
             legend: {
-            text: "ethnic group",
+            text: "Ethnic group",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
             }
